# borix

./: CMakeLists.txt  README.md  makefile
commands/: all_commands.h
commands/c/: echo.c  sum.c
commands/h/: echo.h  sum.h
commands/helper_functions/: array_functions.c  array_functions.h
fs/: file.c  file.h  filesystem.c  filesystem.h
include/: gdt.h  keyboard.h  list.h  screen.h  shell.h  string.h  system.h  types.h  util.h
include/interrupts/: idt.h  isr.h
kernel/: kernel.asm  kernel.c
libc/: gdt.asm  gdt.c  keyboard.c  list.c  screen.c  shell.c  string.c  system.c  util.c
libc/interrupts/: idt.c  isr.c
linker/: linker.ld
mm/: alloc.c  alloc.h  page_vars.h  vmm.c  vmm.h
outputs/: README.md
process/: process.c  process.h
